--- a/pom.xml
+++ b/pom.xml
@@ -120,43 +120,50 @@
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
       <version>${mybatis.version}</version>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
       <version>${spring.version}</version>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-infrastructure</artifactId>
       <version>${spring-batch.version}</version>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
 
     <!-- Test dependencies -->
 
     <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.22</version>
+<!--      <scope>compile</scope>-->
+    </dependency>
+
+    <dependency>
       <groupId>com.atomikos</groupId>
       <artifactId>transactions-jdbc</artifactId>
       <version>5.0.8</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId>
       <version>10.14.2.0</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
@@ -170,35 +177,35 @@
       <groupId>org.jboss.byteman</groupId>
       <artifactId>byteman-bmunit</artifactId>
       <version>4.0.13</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>${spring.version}</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-core</artifactId>
       <version>${spring-batch.version}</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.springframework.batch</groupId>
       <artifactId>spring-batch-test</artifactId>
       <version>${spring-batch.version}</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
       <exclusions>
            <exclusion>
                 <groupId>junit</groupId>
@@ -211,35 +218,35 @@
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>2.5.1</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>3.6.28</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.18.1</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
     <dependency>
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner-core</artifactId>
       <version>2.0.6</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -267,7 +274,7 @@
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner-ejb</artifactId>
       <version>2.0.6</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
       <exclusions>
         <exclusion>
           <groupId>commons-beanutils</groupId>
@@ -283,7 +290,7 @@
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner-jdbc</artifactId>
       <version>2.0.6</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -296,13 +303,13 @@
       <groupId>jakarta.transaction</groupId>
       <artifactId>jakarta.transaction-api</artifactId>
       <version>1.3.3</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
       <version>4.0.4</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
 
   </dependencies>
